--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "numeral": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-headroom": "^3.1.0",
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
     "react-loading-skeleton": "^2.2.0",
